# max78000-hal

./: Cargo.toml  LICENSE  README.md  link.x.example
.cargo/: config.toml
.github/workflows/: clippy-format-rustdocs  clippy-format-rustdocs.yaml  ssh.yaml
flc-asm/: Cargo.toml
flc-asm/src/: lib.rs
hal/: Cargo.toml  build.rs  flc_asm.s
hal/src/: communication.rs  lib.rs  peripherals.rs
hal/src/communication/: lower_layers.rs
hal/src/communication/lower_layers/: crypto.rs  framing.rs
hal/src/communication/lower_layers/crypto/: chachapoly1305.rs
hal/src/peripherals/: adc.rs  aes.rs  bit_banding.rs  bootloader.rs  crc.rs  delay.rs  digital.rs  ecc.rs  flash_controller.rs  gpio.rs  i2c.rs  i2c_bitbang.rs  oscillator.rs  power.rs  random.rs  rtc.rs  serial.rs  synchronization.rs  timer.rs  trng.rs  uart.rs  watchdog.rs
hal/src/peripherals/gpio/: active.rs  common.rs  low_power.rs  pin_traits.rs
hal/src/peripherals/gpio/active/: port_num_types.rs
hal/src/peripherals/gpio/common/: port_num_types.rs
hal/src/peripherals/i2c/: comm.rs  master.rs  slave.rs
hal/src/peripherals/random/: entropy.rs
hal/src/peripherals/random/entropy/: clock_drift.rs  secret.rs  trng_entropy.rs
src/: critical_section.rs  lib.rs  peripherals.rs
src/peripherals/: bit_banding.rs  internals.rs  raw.rs  trng.rs
tests/: .runner_gdb_master  .runner_gdb_slave  Cargo.toml  build.rs  flc_asm.s  i2c_master_run.sh  i2c_slave_run.sh  memory.x  run.sh  uart_tester.py  uart_tester.sh
tests/src/: main.rs  tests.rs
tests/src/tests/: bit_band_tests.rs  crc_tests.rs  csprng_tests.rs  fip_tests.rs  flc_tests.rs  gpio_tests.rs  hello_uart.rs  oscillator_tests.rs  timer_tests.rs  trng_tests.rs  uart_tests.rs  watchdog_tests.rs
