[package]
name = "max78000-hal"
version = "0.1.0"
edition = "2021"
authors = ["Brian Mak"]
categories = ["embedded", "no-std"]
keywords = ["embedded-hal"]
license = "MIT"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
heapless = "0.7.16"
max78000 = { git = "git@github.com:SlugSecurity/max78000.git" }

[features]
rt = ["max78000/rt"]
