[package]
name = "max78000-hal"
version = "0.1.0"
edition = "2021"
authors = ["Brian Mak"]
categories = ["embedded", "no-std"]
keywords = ["embedded-hal"]
license = "MIT"

[dependencies]
embedded-hal = { version = "1.0" }
heapless = "0.7.16"
max78000 = { git = "ssh://git@github.com/SlugSecurity/max78000.git", features = [
    "critical-section",
], tag = "v0.2.1" }
cortex-m-rt = { version = "0.7.3", optional = true }
sealed = "0.5"
chacha20poly1305 = { version = "0.10.1", default-features = false }
generic-array = "0.14"
typenum = "1.17.0"
rand_chacha = { version = "0.3.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
zeroize = { version = "1.7.0", default-features = false }
bitvec = { version = "1.0.1", default-features = false }

[features]
rt = ["max78000/rt", "cortex-m-rt"]
low_frequency = []
