[package]
name = "max78000-hal-tests"
version = "0.1.0"
edition = "2021"
authors = ["2024 UCSC eCTF Team"]
categories = ["embedded", "no-std"]
license = "MIT"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["set-sp", "set-vtor"] }
cortex-m-semihosting = "0.5.0"
libm = "0.2.8"
max78000-hal = { version = "0.1.0", path = "../hal", features = ["rt"] }
embedded-hal = { version = "1.0"}
# panic-semihosting = "0.6.0"
# cant use because duplicate lang item in crate `fault_injection_protection_arm`
# (which `max78000_hal_tests` depends on): `panic_impl`.
fault-injection-protection-arm = {git = "ssh://git@github.com/SlugSecurity/fault-injection-protection-arm.git", default-features = false}
subtle = { version = "2.5", default-features = false}

[features]
low_frequency_test = ["max78000-hal/low_frequency"]
